Fixed spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -71,7 +71,7 @@ li {
 }
 
 #greeting-container {
-  padding: 8% 10% 0;
+  padding: 9% 10% 0;
   text-align: center;
 }
 
